# CodeTokenizer

./: .gitignore  LICENSE  pyproject.toml  sample.py
codetokenizer/: tokenizer.py
